16_subseq/grade.txt
Grading at Sun Mar 21 17:13:01 UTC 2021
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:24:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   else if(n = 1) {
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
